<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_take_snap"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_shoot"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notify_options"
        android:icon="@drawable/ic_notifications_inactive24dp"
        android:orderInCategory="100"
        android:title="@string/alert_notifies"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>