<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="workshop.akbolatss.xchangesrates.presentation.chart.ChartViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="workshop.akbolatss.xchangesrates.presentation.root.RootActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_txt"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/tvExchanger"
                    android:textColor="@color/colorSpinTxt"
                    android:textSize="@dimen/txtExchange" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:text="@string/tvDoubleDots"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/etText" />

                <AutoCompleteTextView
                    android:id="@+id/tvExchanger"
                    entries="@{viewModel.exchangeList}"
                    selectedEntry="@={viewModel.exchange}"
                    showDropDownOnClick="@{true}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_txt"
                    android:completionThreshold="0"
                    android:gravity="center_horizontal"
                    android:labelFor="@id/tvExchanger"
                    android:singleLine="true"
                    android:textColor="@color/colorSpinTxt"
                    android:textSize="@dimen/txtExchange"
                    tools:text="Kraken" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <EditText
                    android:id="@+id/etCoin"
                    style="@style/StyleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:textAllCaps="true" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:text="@string/tvEquality"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/etText" />

                <EditText
                    android:id="@+id/etCurrency"
                    style="@style/StyleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textAllCaps="true" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <AutoCompleteTextView
                    android:id="@+id/tvCoin"
                    entries="@{viewModel.coinList}"
                    selectedEntry="@={viewModel.coin}"
                    showDropDownOnClick="@{true}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_txt"
                    android:completionThreshold="0"
                    android:gravity="center_horizontal"
                    android:labelFor="@id/tvCoin"
                    android:maxLines="1"
                    android:textColor="@color/colorSpinTxt"
                    android:textSize="@dimen/txtExchange"
                    tools:text="BTC" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25" />

                <AutoCompleteTextView
                    android:id="@+id/tvCurrency"
                    entries="@{viewModel.currencyList}"
                    selectedEntry="@={viewModel.currency}"
                    showDropDownOnClick="@{true}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_txt"
                    android:completionThreshold="0"
                    android:gravity="center_horizontal"
                    android:labelFor="@id/tvCurrency"
                    android:maxLines="1"
                    android:textColor="@color/colorSpinTxt"
                    android:textSize="@dimen/txtExchange"
                    tools:text="USD" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorInactive" />

        <LinearLayout
            android:id="@+id/layoutChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp" />
        </LinearLayout>
    </LinearLayout>
</layout>
